Enhance README with GC pressure benchmarks
Added GC pressure benchmarks and updated conclusions regarding Virtual Threads and CompletableFuture performance.